--- a/src/index.css
+++ b/src/index.css
@@ -91,9 +91,6 @@ footer {
 
 /* Additional styles for the About section */
 .about-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   animation: slideIn 1s ease-in-out;
   /* Use slideIn animation with 1 second duration */
 }
@@ -177,12 +174,12 @@ footer {
   background-color: #4c9540;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
 }
 
 .roadmap-item h3 {
   margin-top: 0;
   color: #fff;
+  font-size: 27px;
 }
 
 /* Media query for tablet screens */
@@ -208,11 +205,6 @@ footer {
   section h2 {
     font-size: 36px;
     /* Decrease font size for smaller screens */
-  }
-
-  .about-content {
-    flex-direction: column;
-    /* Stack about content vertically on smaller screens */
   }
 
   .tokenomics-content {
@@ -277,7 +269,7 @@ footer {
 }
 
 .roadmap-item ul li {
-  list-style-type: none;
+  list-style-type: "👩‍🍳";
   /* Remove default bullet points */
   position: relative;
   /* Position for custom bullet */
@@ -322,7 +314,7 @@ footer {
 
 .token {
   font-weight: bold;
-  /* font-size: 20px; */
+  font-size: 20px;
   color: #f5f8f4;
   cursor: pointer;
   /* text-decoration: underline; */
@@ -352,6 +344,10 @@ footer {
   padding: 25px 0;
   background-color: #4c9540; /* Green background color */
   text-align: center;
+}
+
+#about {
+  padding: 25px 0;
 }
 
 #airdrop h2 {
@@ -421,6 +417,67 @@ footer {
 #countdown {
   font-size: 22px;
   color: #fff; /* White text color */
+  font-size: 1.5rem;
+}
+
+.copy-icon {
+  margin-left: 5px;
+}
+
+.menu-toggle {
+  display: none;
+}
+
+/* Define mobile viewport */
+@media only screen and (max-width: 768px) {
+  .container {
+    padding: 0 20px;
+  }
+
+  nav {
+    display: none;
+    background-color: #333;
+    position: absolute;
+    top: 65px;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 65px);
+    box-shadow: 0px 0px 10px 1px rgb(0 0 0 / 30%);
+    overflow-y: auto;
+    margin-top: 55px;
+  }
+
+  nav.show {
+    display: block;
+  }
+
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  nav ul li {
+    margin-bottom: 10px;
+  }
+
+  nav ul li a {
+    display: block;
+    padding: 10px;
+    color: #fff;
+    text-decoration: none;
+  }
+
+  .menu-toggle {
+    display: block;
+    cursor: pointer;
+    color: #fff;
+    font-size: 24px;
+  }
+
+  .token {
+    font-size: 13.5px;
+  }
 }
 
 /* Media query for responsiveness */
